# WorldCupQuente

./: .env.example  .gitignore  LICENSE  README.md  README.pt-BR.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_bot.py  test_calendar_handler.py  test_config.py  test_espn_parsers.py  test_event_parsers.py  test_history_handler.py  test_i18n.py  test_inline.py  test_live_handler.py  test_live_lineups.py  test_live_monitor.py  test_players_formatter.py  test_playoff_bracket.py  test_rosters.py  test_sofascore_client.py  test_sofascore_incidents.py  test_sofascore_live.py  test_sofascore_mapping.py  test_sofascore_schedule.py  test_sofascore_standings.py  test_standings_handler.py  test_team_handlers.py
tools/: sofascore_healthcheck.py
worldcupquente/: __main__.py  bot.py  cache.py  commands.py  config.py  espn_client.py  espn_events.py  event_incidents.py  event_utils.py  formatters.py  handlers.py  i18n.py  keyboards.py  live_delivery.py  live_events.py  live_incidents.py  live_monitor.py  live_standings.py  notification_preferences.py  playoff_bracket.py  playoff_fifa_table.py  playoff_fifa_table_data.py  services.py  sofascore_client.py  team_translations.py
worldcupquente/formatters/: __init__.py  games.py  notifications.py  players.py  playoffs.py  rosters.py  standings.py  utils.py
worldcupquente/handlers/: __init__.py  base.py  calendar.py  config.py  history.py  inline.py  live.py  playoffs.py  standings.py  teams.py  utils.py
