[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcupquente"
version = "0.1.0"
description = "Telegram bot for FIFA World Cup 2026 fixtures and squads"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "python-telegram-bot>=22.8,<23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-mock>=3.0,<4.0",
    "ruff>=0.3,<1.0",
]

[project.scripts]
worldcupquente = "worldcupquente.bot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["worldcupquente*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008", "ARG001"]
